--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.323.0",
+    "mongoose": "^8.1.1",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.9",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
